# enumacro

./: Cargo.toml  README.md
enumacro-derive/: Cargo.toml
enumacro-derive/src/: lib.rs
src/: lib.rs
tests/: tests.rs
