[package]
name = "enumacro"
version = "0.1.0"
authors = ["Luca Pizzamiglio <pizzamig@FreeBSD.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = {version = "1", features=["derive","parsing","printing","clone-impls","extra-traits","proc-macro"]}
quote = "1"
proc-macro2 = "1"
